[tool.poetry]
name = "qube"
version = "0.1.0"
description = "A Python SDK for interacting with qube REST API and MQTT services"
authors = ["q-better <dev@q-better.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
