[tool.poetry]
name = "qube"
version = "0.1.0"
description = "A Python SDK for interacting with qube REST API and MQTT services"
authors = ["q-better <dev@q-better.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^2.1.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
isort = "^5.13.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
